homepage ui bugs(scrollbar,date,background img)

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,13 @@ body{
     border-radius: 10px;
     background-clip: content-box;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
